--- a/TextToSpeechDownloader.Console/TextToSpeechDownloader.Console.csproj
+++ b/TextToSpeechDownloader.Console/TextToSpeechDownloader.Console.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TextToSpeechDownloader.Engines\Google\WaveNet\WaveNet.csproj" />
+  </ItemGroup>
+
 </Project>
