Restructure project. Preparing for service factory implementation

--- a/TextToSpeech.Console/TextToSpeech.Console.csproj
+++ b/TextToSpeech.Console/TextToSpeech.Console.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TextToSpeechDownloader.Engines\Google\WaveNet\WaveNet.csproj" />
+    <ProjectReference Include="..\TextToSpeech.Engines\TextToSpeech.Engines.Google\TextToSpeech.Engines.Google.WaveNet\TextToSpeech.Engines.Google.WaveNet.csproj" />
   </ItemGroup>
 
 </Project>
