--- a/TextToSpeech.Engines/TextToSpeech.Engines.Google/TextToSpeech.Engines.Google.WaveNet/TextToSpeech.Engines.Google.WaveNet.csproj
+++ b/TextToSpeech.Engines/TextToSpeech.Engines.Google/TextToSpeech.Engines.Google.WaveNet/TextToSpeech.Engines.Google.WaveNet.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\TextToSpeechDownloader.Common\TextToSpeechDownloader.Common.csproj" />
+    <ProjectReference Include="..\..\..\TextToSpeech.Common\TextToSpeech.Common.csproj" />
   </ItemGroup>
 
 </Project>
